[gd_scene load_steps=18 format=2]

[ext_resource path="res://Combat/Combat.gd" type="Script" id=1]
[ext_resource path="res://icons/blank.png" type="Texture" id=2]
[ext_resource path="res://Combat/AC.tscn" type="PackedScene" id=3]
[ext_resource path="res://Combat/HP.tscn" type="PackedScene" id=4]
[ext_resource path="res://Combat/INIT.gd" type="Script" id=5]
[ext_resource path="res://icons/shoe.png" type="Texture" id=6]
[ext_resource path="res://Font/Combat.tres" type="DynamicFont" id=7]
[ext_resource path="res://Combat/PER.gd" type="Script" id=8]
[ext_resource path="res://icons/eye.png" type="Texture" id=9]
[ext_resource path="res://Combat/Weapon.gd" type="Script" id=10]
[ext_resource path="res://icons/sword.png" type="Texture" id=11]
[ext_resource path="res://Combat/Ammo.gd" type="Script" id=12]
[ext_resource path="res://Combat/Turns.gd" type="Script" id=13]
[ext_resource path="res://Combat/Conditions.gd" type="Script" id=14]
[ext_resource path="res://Combat/InputPopup.gd" type="Script" id=15]
[ext_resource path="res://Font/Inprimis55regular_v126free.ttf" type="DynamicFontData" id=16]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 16 )

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]

[node name="blank" type="Sprite" parent="Background"]
modulate = Color( 0.152941, 0.152941, 0.152941, 1 )
position = Vector2( 512, 300 )
texture = ExtResource( 2 )

[node name="AC" parent="." instance=ExtResource( 3 )]

[node name="HP" parent="." instance=ExtResource( 4 )]
position = Vector2( 394.24, -10 )

[node name="INIT" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 5 )

[node name="shoe" type="Sprite" parent="INIT"]
modulate = Color( 0.541176, 0.541176, 0.541176, 1 )
position = Vector2( 940.325, 64.8901 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="TextureButton" type="TextureButton" parent="INIT"]
margin_left = 866.635
margin_top = 2.44353
margin_right = 906.635
margin_bottom = 42.4435
rect_scale = Vector2( 3.89987, 2.98907 )

[node name="Label" type="Label" parent="INIT"]
margin_left = 922.773
margin_top = 44.9784
margin_right = 1050.77
margin_bottom = 295.979
rect_scale = Vector2( 0.456453, 0.445124 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "3"

[node name="PER" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="eye" type="Sprite" parent="PER"]
modulate = Color( 0.541176, 0.541176, 0.541176, 1 )
position = Vector2( 939.98, 175.205 )
scale = Vector2( 0.28, 0.28 )
texture = ExtResource( 9 )

[node name="TextureButton" type="TextureButton" parent="PER"]
margin_left = 867.302
margin_top = 132.668
margin_right = 907.302
margin_bottom = 172.668
rect_scale = Vector2( 3.62145, 2.12162 )

[node name="Label" type="Label" parent="PER"]
margin_left = 915.417
margin_top = 153.436
margin_right = 1171.42
margin_bottom = 404.435
rect_scale = Vector2( 0.363372, 0.401115 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "11"

[node name="Weapon" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( -10.0001, -3.00002 )
script = ExtResource( 10 )

[node name="sword" type="Sprite" parent="Weapon"]
modulate = Color( 0.541176, 0.541176, 0.541176, 1 )
position = Vector2( 241.119, 389.456 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 11 )

[node name="weapon_name" type="Label" parent="Weapon"]
margin_left = 182.451
margin_top = 330.692
margin_right = 1524.45
margin_bottom = 581.692
rect_scale = Vector2( 0.295, 0.299 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "Greatsword"

[node name="attack" type="Label" parent="Weapon"]
margin_left = 30.9514
margin_top = 360.403
margin_right = 132.951
margin_bottom = 763.403
rect_scale = Vector2( 0.459, 0.453 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "5
"

[node name="damage" type="Label" parent="Weapon"]
margin_left = 239.466
margin_top = 372.232
margin_right = 556.466
margin_bottom = 572.232
rect_scale = Vector2( 0.334, 0.294 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "2d6"

[node name="weapon_button" type="TextureButton" parent="Weapon"]
margin_left = 183.209
margin_top = 326.707
margin_right = 223.209
margin_bottom = 366.707
rect_scale = Vector2( 5.95676, 1.08991 )

[node name="attack_button" type="TextureButton" parent="Weapon"]
margin_left = 22.5627
margin_top = 359.197
margin_right = 62.5627
margin_bottom = 399.197
rect_scale = Vector2( 1.23046, 1.43489 )

[node name="damage_button" type="TextureButton" parent="Weapon"]
margin_left = 217.504
margin_top = 370.93
margin_right = 257.504
margin_bottom = 410.93
rect_scale = Vector2( 3.53176, 1.09825 )

[node name="Ammo" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 9.00006, 87.8427 )
scale = Vector2( 0.628066, 0.678121 )
script = ExtResource( 12 )

[node name="text" type="Label" parent="Ammo"]
margin_left = 8.00003
margin_top = 519.003
margin_right = 579.0
margin_bottom = 770.003
rect_scale = Vector2( 0.515, 0.691 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "Ammo:"

[node name="ammo" type="Label" parent="Ammo"]
margin_left = 225.809
margin_top = 527.798
margin_right = 353.809
margin_bottom = 778.798
rect_scale = Vector2( 0.685, 0.63 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "1"

[node name="TextureButton" type="TextureButton" parent="Ammo"]
margin_left = 7.1324
margin_top = 523.289
margin_right = 47.1324
margin_bottom = 563.289
rect_scale = Vector2( 5.25581, 2.03921 )

[node name="Turns" type="Node2D" parent="."]
position = Vector2( 421.271, 8.45248 )
scale = Vector2( 0.910115, 0.994949 )
script = ExtResource( 13 )

[node name="text" type="Label" parent="Turns"]
margin_left = 8.00003
margin_top = 519.003
margin_right = 579.0
margin_bottom = 770.003
rect_scale = Vector2( 0.652, 0.684 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "Turn:"

[node name="turns" type="Label" parent="Turns"]
margin_left = 218.001
margin_top = 520.003
margin_right = 346.001
margin_bottom = 771.003
rect_scale = Vector2( 0.658, 0.666 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "1"

[node name="TextureButton" type="TextureButton" parent="Turns"]
margin_top = 521.648
margin_right = 40.0
margin_bottom = 561.648
rect_scale = Vector2( 5.35952, 1.91351 )

[node name="Conditions" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 14 )

[node name="text" type="Label" parent="Conditions"]
margin_left = 693.004
margin_top = 297.002
margin_right = 1845.0
margin_bottom = 448.002
rect_scale = Vector2( 0.32, 0.36 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "Buffs/Conditions:"

[node name="Turns1" type="Label" parent="Conditions"]
margin_left = 955.0
margin_top = 350.0
margin_right = 1109.0
margin_bottom = 501.0
rect_scale = Vector2( 0.426297, 0.396473 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "0"

[node name="Desc1" type="Label" parent="Conditions"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 880.0
margin_top = 350.0
margin_right = 1034.0
margin_bottom = 501.0
grow_horizontal = 2
rect_scale = Vector2( 0.426297, 0.396473 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
align = 2
valign = 1
autowrap = true

[node name="turns_btn1" type="TextureButton" parent="Conditions"]
margin_left = 949.591
margin_top = 347.925
margin_right = 989.591
margin_bottom = 387.925
rect_scale = Vector2( 1.11237, 1.40025 )

[node name="desc_btn1" type="TextureButton" parent="Conditions"]
margin_left = 693.633
margin_top = 346.817
margin_right = 733.633
margin_bottom = 386.817
rect_scale = Vector2( 6.36044, 1.40025 )

[node name="Turns2" type="Label" parent="Conditions"]
margin_left = 955.0
margin_top = 410.0
margin_right = 1109.0
margin_bottom = 561.0
rect_scale = Vector2( 0.426297, 0.396473 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "0"

[node name="Desc2" type="Label" parent="Conditions"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 880.0
margin_top = 410.0
margin_right = 1034.0
margin_bottom = 561.0
grow_horizontal = 2
rect_scale = Vector2( 0.426297, 0.396473 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
align = 2
valign = 1
autowrap = true

[node name="turns_btn2" type="TextureButton" parent="Conditions"]
margin_left = 949.591
margin_top = 408.867
margin_right = 989.591
margin_bottom = 448.867
rect_scale = Vector2( 1.11237, 1.40025 )

[node name="desc_btn2" type="TextureButton" parent="Conditions"]
margin_left = 698.066
margin_top = 406.651
margin_right = 738.066
margin_bottom = 446.651
rect_scale = Vector2( 6.24, 1.33456 )

[node name="Turns3" type="Label" parent="Conditions"]
margin_left = 955.0
margin_top = 470.0
margin_right = 1109.0
margin_bottom = 621.0
rect_scale = Vector2( 0.426297, 0.396473 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "0"

[node name="Desc3" type="Label" parent="Conditions"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 880.0
margin_top = 470.0
margin_right = 1034.0
margin_bottom = 621.0
grow_horizontal = 2
rect_scale = Vector2( 0.426297, 0.396473 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
align = 2
valign = 1
autowrap = true

[node name="turns_btn3" type="TextureButton" parent="Conditions"]
margin_left = 950.699
margin_top = 467.593
margin_right = 990.699
margin_bottom = 507.593
rect_scale = Vector2( 1.11237, 1.40025 )

[node name="desc_btn3" type="TextureButton" parent="Conditions"]
margin_left = 696.957
margin_top = 469.809
margin_right = 736.957
margin_bottom = 509.809
rect_scale = Vector2( 6.22564, 1.2745 )

[node name="InputPopup" type="PopupMenu" parent="."]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0.901961 )
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 15 )

[node name="CenterContainer" type="CenterContainer" parent="InputPopup"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="LineEdit" type="LineEdit" parent="InputPopup/CenterContainer"]
margin_left = 429.0
margin_top = 275.0
margin_right = 595.0
margin_bottom = 325.0
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
align = 1
expand_to_text_length = true
context_menu_enabled = false
placeholder_text = "Enter value"

[connection signal="pressed" from="INIT/TextureButton" to="INIT" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="PER/TextureButton" to="PER" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Weapon/weapon_button" to="Weapon" method="_on_weapon_button_pressed"]
[connection signal="pressed" from="Weapon/attack_button" to="Weapon" method="_on_attack_button_pressed"]
[connection signal="pressed" from="Weapon/damage_button" to="Weapon" method="_on_damage_button_pressed"]
[connection signal="pressed" from="Ammo/TextureButton" to="Ammo" method="_on_TextureButton_pressed"]
[connection signal="new_turn" from="Turns" to="Conditions" method="_on_Turns_new_turn"]
[connection signal="button_down" from="Turns/TextureButton" to="Turns" method="_on_TextureButton_button_down"]
[connection signal="button_up" from="Turns/TextureButton" to="Turns" method="_on_TextureButton_button_up"]
[connection signal="button_down" from="Conditions/turns_btn1" to="Conditions" method="_on_turns_btn1_button_down"]
[connection signal="button_up" from="Conditions/turns_btn1" to="Conditions" method="_on_turns_btn1_button_up"]
[connection signal="pressed" from="Conditions/desc_btn1" to="Conditions" method="_on_desc_btn1_pressed"]
[connection signal="button_down" from="Conditions/turns_btn2" to="Conditions" method="_on_turns_btn2_button_down"]
[connection signal="button_up" from="Conditions/turns_btn2" to="Conditions" method="_on_turns_btn2_button_up"]
[connection signal="pressed" from="Conditions/desc_btn2" to="Conditions" method="_on_desc_btn2_pressed"]
[connection signal="button_down" from="Conditions/turns_btn3" to="Conditions" method="_on_turns_btn3_button_down"]
[connection signal="button_up" from="Conditions/turns_btn3" to="Conditions" method="_on_turns_btn3_button_up"]
[connection signal="pressed" from="Conditions/desc_btn3" to="Conditions" method="_on_desc_btn3_pressed"]
[connection signal="focus_exited" from="InputPopup/CenterContainer/LineEdit" to="InputPopup" method="_on_LineEdit_focus_exited"]
[connection signal="text_entered" from="InputPopup/CenterContainer/LineEdit" to="InputPopup" method="_on_LineEdit_text_entered"]
